2011-05-15  Mike Blumenkrantz (discomfitor/zmike)
+eeze_disk_cancel
Cancel the current pending mount/umount operation on a disk
-------------------------------------
+EEZE_DISK_MOUNTOPT_UID
Add a uid=%i mount option using getuid, NOT geteuid
--------------------------------------
+eeze_disk_mount_wrapper_set
+eeze_disk_mount_wrapper_get
Allow use of wrapper exes for mount commands (such as sudo)
---------------------------------------
+eeze_disk_udev_get_parent
+eeze_disk_udev_get_property
+eeze_disk_udev_get_sysattr
+eeze_disk_udev_walk_check_sysattr
+eeze_disk_udev_walk_get_sysattr
New functions to perform udev lookups directly on disk devices without wasting unnecessary function calls

2011-03-12  Mike Blumenkrantz (discomfitor/zmike)
+eeze_udev_syspath_get_devname, added from patch sent by Clement Battin

2011-03-12  Mike Blumenkrantz (discomfitor/zmike)
+EEZE_UDEV_TYPE_NET, added from patch sent by Clement Battin

2011-03-03  Mike Blumenkrantz (discomfitor/zmike)
fix bug with watches involving filtering being too aggressive for removed/offlined devices

2011-02-09  Mike Blumenkrantz (discomfitor/zmike)
implement actual handling of mountopts, add utf8 to default mountopts, allow iso automounting in eeze_mount
+EEZE_DISK_MOUNTOPT_UTF8 = (1 << 2)
+EEZE_DISK_MOUNTOPT_NOEXEC = (1 << 3)
+EEZE_DISK_MOUNTOPT_NOSUID = (1 << 4)
+EEZE_DISK_MOUNTOPT_REMOUNT = (1 << 5)
+EAPI Eina_Bool      eeze_disk_mountopts_set(Eeze_Disk *disk, int opts);
+EAPI int            eeze_disk_mountopts_get(Eeze_Disk *disk);

2011-01-29  Mike Blumenkrantz (discomfitor/zmike)
+Eeze_Disk_Type enum
+Eeze_Mount_Opts enum

+EEZE_EVENT_DISK_MOUNT
+EEZE_EVENT_DISK_UNMOUNT
+EEZE_EVENT_DISK_ERROR

+Eeze_Event_Disk_Mount struct
+Eeze_Event_Disk_Unmount struct
+Eeze_Event_Disk_Error struct

+the following functions:
EAPI void           eeze_disk_function(void);
EAPI Eeze_Disk     *eeze_disk_new(const char *path);
EAPI Eeze_Disk     *eeze_disk_new_from_mount(const char *mount_point);