@@ -109,6 +109,7 @@ if test "x$eeze_mount" = "xyes";then
   with_umount="/bin/umount"
   AC_ARG_WITH([mount], AS_HELP_STRING([--with-mount], [specify mount bin @<:@default=detect@:>@]))
   AC_ARG_WITH([umount], AS_HELP_STRING([--with-umount], [specify umount bin @<:@default=detect@:>@]))
+  AC_ARG_WITH([eject], AS_HELP_STRING([--with-eject], [specify eject bin @<:@default=detect@:>@]))
   PKG_CHECK_MODULES([LIBMOUNT], [mount >= 2.18.0])
   mount_v=$(pkg-config --modversion mount)
   PKG_CHECK_MODULES([ECORE_FILE], [ecore-file >= 1.0.0])
@@ -122,6 +123,11 @@ if test "x$eeze_mount" = "xyes";then
     AC_PATH_PROG([with_umount], [umount], AC_MSG_ERROR([umount could not be found in PATH]))
   fi
   AC_DEFINE_UNQUOTED([EEZE_UNMOUNT_BIN], ["$with_umount"], [umount bin to use])
+
+  if test "x$with_eject" = "xdetect";then
+    AC_PATH_PROG([with_eject], [eject], AC_MSG_ERROR([eject could not be found in PATH]))
+  fi
+  AC_DEFINE_UNQUOTED([EEZE_EJECT_BIN], ["$with_eject"], [eject bin to use])
 fi
 AM_CONDITIONAL([OLD_LIBMOUNT], [test -n $mount_v -a $(echo $mount_v | cut -d'.' -f2) -lt 19])
 if test -z "$OLD_LIBMOUNT_TRUE" ; then
@@ -182,6 +188,7 @@ if test "x$eeze_mount" = "xyes";then
   echo
   echo "Mount..................: ${with_mount}"
   echo "Umount.................: ${with_umount}"
+  echo "Eject..................: ${with_eject}"
   echo
 fi
 echo "Test...................: ${have_eeze_udev_test}"
